syntaxAnalyser.output
Terminals unused in grammar

    T_COMMENT
    T_EOF


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: header declarations subprograms comp_statement $@1 T_DOT

    3 header: T_PROGRAM T_ID T_SEMI
    4       | T_PROGRAM T_ID error

    5 declarations: constdefs typedefs vardefs

    6 constdefs: T_CONST constant_defs T_SEMI
    7          | T_CONST constant_defs error
    8          | %empty

    9 $@2: %empty

   10 constant_defs: constant_defs T_SEMI T_ID $@2 T_EQU expression

   11 $@3: %empty

   12 constant_defs: T_ID $@3 T_EQU expression
   13              | constant_defs error T_ID T_EQU expression

   14 expression: expression T_RELOP expression
   15           | expression T_EQU expression
   16           | expression T_INOP expression
   17           | expression T_OROP expression
   18           | expression T_ADDOP expression
   19           | expression T_MULDIVANDOP expression
   20           | T_ADDOP expression
   21           | T_NOTOP expression
   22           | variable

   23 $@4: %empty

   24 expression: T_ID $@4 T_LPAREN expressions T_RPAREN
   25           | constant
   26           | T_LPAREN expression T_RPAREN
   27           | setexpression
   28           | T_LPAREN expression error

   29 variable: T_ID
   30         | variable T_DOT T_ID
   31         | variable T_LBRACK expressions T_RBRACK
   32         | variable T_LBRACK expressions error

   33 expressions: expressions T_COMMA expression
   34            | expression

   35 constant: T_ICONST
   36         | T_RCONST
   37         | T_BCONST
   38         | T_CCONST

   39 setexpression: T_LBRACK elexpressions T_RBRACK
   40              | T_LBRACK error T_RBRACK

   41 elexpressions: elexpressions T_COMMA elexpression
   42              | elexpression

   43 elexpression: expression T_DOTDOT expression
   44             | expression

   45 typedefs: T_TYPE type_defs T_SEMI
   46         | T_TYPE type_defs error
   47         | %empty

   48 $@5: %empty

   49 type_defs: type_defs T_SEMI T_ID $@5 T_EQU type_def
   50          | T_ID T_EQU type_def
   51          | type_defs error T_ID T_EQU type_def

   52 type_def: T_ARRAY T_LBRACK dims T_RBRACK T_OF typename
   53         | T_SET T_OF typename
   54         | T_RECORD fields T_END
   55         | T_LPAREN identifiers T_RPAREN
   56         | limit T_DOTDOT limit
   57         | T_LPAREN identifiers error
   58         | T_LPAREN error T_RPAREN

   59 dims: dims T_COMMA limits
   60     | limits

   61 limits: limit T_DOTDOT limit
   62       | T_ID

   63 limit: T_ADDOP T_ICONST
   64      | T_ADDOP T_ID
   65      | T_ICONST
   66      | T_CCONST
   67      | T_BCONST
   68      | T_ID

   69 typename: standard_type
   70         | T_ID

   71 standard_type: T_INTEGER
   72              | T_REAL
   73              | T_BOOLEAN
   74              | T_CHAR

   75 fields: fields T_SEMI field
   76       | field
   77       | fields error field

   78 field: identifiers T_COLON typename

   79 identifiers: identifiers T_COMMA T_ID
   80            | T_ID

   81 vardefs: T_VAR variable_defs T_SEMI
   82        | T_VAR variable_defs error
   83        | %empty

   84 variable_defs: variable_defs T_SEMI identifiers T_COLON typename
   85              | variable_defs error identifiers T_COLON typename
   86              | identifiers T_COLON typename

   87 subprograms: subprograms subprogram T_SEMI
   88            | %empty
   89            | subprograms subprogram error

   90 subprogram: sub_header T_SEMI T_FORWARD
   91           | sub_header T_SEMI declarations subprograms comp_statement
   92           | sub_header error T_FORWARD
   93           | sub_header error declarations subprograms comp_statement

   94 $@6: %empty

   95 sub_header: T_FUNCTION T_ID $@6 formal_parameters T_COLON standard_type

   96 $@7: %empty

   97 sub_header: T_PROCEDURE T_ID $@7 formal_parameters
   98           | T_FUNCTION T_ID

   99 formal_parameters: T_LPAREN parameter_list T_RPAREN
  100                  | T_LPAREN error T_RPAREN
  101                  | %empty

  102 parameter_list: parameter_list T_SEMI pass identifiers T_COLON typename
  103               | parameter_list error pass identifiers T_COLON typename
  104               | pass identifiers T_COLON typename

  105 pass: T_VAR
  106     | %empty

  107 $@8: %empty

  108 comp_statement: T_BEGIN $@8 statements T_END

  109 statements: statements T_SEMI statement
  110           | statement
  111           | statements error statement

  112 statement: assignment
  113          | if_statement
  114          | while_statement
  115          | for_statement
  116          | with_statement
  117          | subprogram_call
  118          | io_statement
  119          | comp_statement
  120          | %empty

  121 assignment: variable T_ASSIGN expression
  122           | variable T_ASSIGN T_STRINGS

  123 if_statement: T_IF expression T_THEN statement if_tail
  124             | T_IF expression error statement if_tail

  125 if_tail: T_ELSE statement
  126        | %empty

  127 while_statement: T_WHILE expression T_DO statement

  128 $@9: %empty

  129 for_statement: T_FOR T_ID $@9 T_ASSIGN iter_space T_DO statement

  130 iter_space: expression T_TO expression
  131           | expression T_DOWNTO expression

  132 with_statement: T_WITH variable T_DO statement

  133 subprogram_call: T_ID

  134 $@10: %empty

  135 subprogram_call: T_ID T_LPAREN $@10 expressions T_RPAREN

  136 io_statement: T_READ T_LPAREN read_list T_RPAREN
  137             | T_WRITE T_LPAREN write_list T_RPAREN
  138             | T_READ T_LPAREN read_list error
  139             | T_WRITE T_LPAREN write_list error

  140 read_list: read_list T_COMMA read_item
  141          | read_item

  142 read_item: variable

  143 write_list: write_list T_COMMA write_item
  144           | write_item

  145 write_item: expression
  146           | T_STRINGS


Terminals, with rules where they appear

    $end (0) 0
    error (256) 4 7 13 28 32 40 46 51 57 58 77 82 85 89 92 93 100 103 111 124 138 139
    T_PROGRAM <strval> (258) 3 4
    T_PROCEDURE <strval> (259) 97
    T_CHAR <strval> (260) 74
    T_ARRAY <strval> (261) 52
    T_SET <strval> (262) 53
    T_OF <strval> (263) 52 53
    T_RECORD <strval> (264) 54
    T_REAL <strval> (265) 72
    T_READ <strval> (266) 136 138
    T_VAR <strval> (267) 81 82 105
    T_FORWARD <strval> (268) 90 92
    T_FOR <strval> (269) 129
    T_COMMENT <strval> (270)
    T_FUNCTION <strval> (271) 95 98
    T_INTEGER <strval> (272) 71
    T_IF <strval> (273) 123 124
    T_BOOLEAN <strval> (274) 73
    T_BEGIN <strval> (275) 108
    T_END <strval> (276) 54 108
    T_ELSE <strval> (277) 125
    T_TO <strval> (278) 130
    T_THEN <strval> (279) 123
    T_TYPE <strval> (280) 45 46
    T_WHILE <strval> (281) 127
    T_WITH <strval> (282) 132
    T_WRITE <strval> (283) 137 139
    T_DO <strval> (284) 127 129 132
    T_DOWNTO <strval> (285) 131
    T_CONST <strval> (286) 6 7
    T_ID <strval> (287) 3 4 10 12 13 24 29 30 49 50 51 62 64 68 70 79 80 95 97 98 129 133 135
    T_RELOP <strval> (288) 14
    T_ADDOP <strval> (289) 18 20 63 64
    T_OROP <strval> (290) 17
    T_MULDIVANDOP <strval> (291) 19
    T_NOTOP <strval> (292) 21
    T_LPAREN <strval> (293) 24 26 28 55 57 58 99 100 135 136 137 138 139
    T_RPAREN <strval> (294) 24 26 55 58 99 100 135 136 137
    T_CCONST <strval> (295) 38 66
    T_SEMI <strval> (296) 3 6 10 45 49 75 81 84 87 90 91 102 109
    T_DOT <strval> (297) 2 30
    T_DOTDOT <strval> (298) 43 56 61
    T_COMMA <strval> (299) 33 41 59 79 140 143
    T_EQU <strval> (300) 10 12 13 15 49 50 51
    T_COLON <strval> (301) 78 84 85 86 95 102 103 104
    T_ASSIGN <strval> (302) 121 122 129
    T_LBRACK <strval> (303) 31 32 39 40 52
    T_RBRACK <strval> (304) 31 39 40 52
    T_EOF <strval> (305)
    T_INOP <strval> (306) 16
    T_BCONST <strval> (307) 37 67
    T_STRINGS <strval> (308) 122 146
    T_ICONST <intval> (309) 35 63 65
    T_RCONST <doubleval> (310) 36
    LOWER_THAN_ELSE (311)
    fake (312)


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    program (59)
        on left: 2
        on right: 0
    $@1 (60)
        on left: 1
        on right: 2
    header <strval> (61)
        on left: 3 4
        on right: 2
    declarations <strval> (62)
        on left: 5
        on right: 2 91 93
    constdefs <strval> (63)
        on left: 6 7 8
        on right: 5
    constant_defs <strval> (64)
        on left: 10 12 13
        on right: 6 7 10 13
    $@2 (65)
        on left: 9
        on right: 10
    $@3 (66)
        on left: 11
        on right: 12
    expression <strval> (67)
        on left: 14 15 16 17 18 19 20 21 22 24 25 26 27 28
        on right: 10 12 13 14 15 16 17 18 19 20 21 26 28 33 34 43 44 121 123 124 127 130 131 145
    $@4 (68)
        on left: 23
        on right: 24
    variable <strval> (69)
        on left: 29 30 31 32
        on right: 22 30 31 32 121 122 132 142
    expressions <strval> (70)
        on left: 33 34
        on right: 24 31 32 33 135
    constant <strval> (71)
        on left: 35 36 37 38
        on right: 25
    setexpression <strval> (72)
        on left: 39 40
        on right: 27
    elexpressions <strval> (73)
        on left: 41 42
        on right: 39 41
    elexpression <strval> (74)
        on left: 43 44
        on right: 41 42
    typedefs <strval> (75)
        on left: 45 46 47
        on right: 5
    type_defs <strval> (76)
        on left: 49 50 51
        on right: 45 46 49 51
    $@5 (77)
        on left: 48
        on right: 49
    type_def <strval> (78)
        on left: 52 53 54 55 56 57 58
        on right: 49 50 51
    dims <strval> (79)
        on left: 59 60
        on right: 52 59
    limits <strval> (80)
        on left: 61 62
        on right: 59 60
    limit <strval> (81)
        on left: 63 64 65 66 67 68
        on right: 56 61
    typename <strval> (82)
        on left: 69 70
        on right: 52 53 78 84 85 86 102 103 104
    standard_type <strval> (83)
        on left: 71 72 73 74
        on right: 69 95
    fields <strval> (84)
        on left: 75 76 77
        on right: 54 75 77
    field <strval> (85)
        on left: 78
        on right: 75 76 77
    identifiers <strval> (86)
        on left: 79 80
        on right: 55 57 78 79 84 85 86 102 103 104
    vardefs <strval> (87)
        on left: 81 82 83
        on right: 5
    variable_defs <strval> (88)
        on left: 84 85 86
        on right: 81 82 84 85
    subprograms <strval> (89)
        on left: 87 88 89
        on right: 2 87 89 91 93
    subprogram <strval> (90)
        on left: 90 91 92 93
        on right: 87 89
    sub_header <strval> (91)
        on left: 95 97 98
        on right: 90 91 92 93
    $@6 (92)
        on left: 94
        on right: 95
    $@7 (93)
        on left: 96
        on right: 97
    formal_parameters <strval> (94)
        on left: 99 100 101
        on right: 95 97
    parameter_list <strval> (95)
        on left: 102 103 104
        on right: 99 102 103
    pass <strval> (96)
        on left: 105 106
        on right: 102 103 104
    comp_statement <strval> (97)
        on left: 108
        on right: 2 91 93 119
    $@8 (98)
        on left: 107
        on right: 108
    statements <strval> (99)
        on left: 109 110 111
        on right: 108 109 111
    statement <strval> (100)
        on left: 112 113 114 115 116 117 118 119 120
        on right: 109 110 111 123 124 125 127 129 132
    assignment <strval> (101)
        on left: 121 122
        on right: 112
    if_statement <strval> (102)
        on left: 123 124
        on right: 113
    if_tail (103)
        on left: 125 126
        on right: 123 124
    while_statement <strval> (104)
        on left: 127
        on right: 114
    for_statement <strval> (105)
        on left: 129
        on right: 115
    $@9 (106)
        on left: 128
        on right: 129
    iter_space <strval> (107)
        on left: 130 131
        on right: 129
    with_statement <strval> (108)
        on left: 132
        on right: 116
    subprogram_call <strval> (109)
        on left: 133 135
        on right: 117
    $@10 (110)
        on left: 134
        on right: 135
    io_statement <strval> (111)
        on left: 136 137 138 139
        on right: 118
    read_list <strval> (112)
        on left: 140 141
        on right: 136 138 140
    read_item <strval> (113)
        on left: 142
        on right: 140 141
    write_list <strval> (114)
        on left: 143 144
        on right: 137 139 143
    write_item <strval> (115)
        on left: 145 146
        on right: 143 144


State 0

    0 $accept: • program $end

    T_PROGRAM  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    3 header: T_PROGRAM • T_ID T_SEMI
    4       | T_PROGRAM • T_ID error

    T_ID  shift, and go to state 4


State 2

    0 $accept: program • $end

    $end  shift, and go to state 5


State 3

    2 program: header • declarations subprograms comp_statement $@1 T_DOT

    T_CONST  shift, and go to state 6

    $default  reduce using rule 8 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    3 header: T_PROGRAM T_ID • T_SEMI
    4       | T_PROGRAM T_ID • error

    error   shift, and go to state 9
    T_SEMI  shift, and go to state 10


State 5

    0 $accept: program $end •

    $default  accept


State 6

    6 constdefs: T_CONST • constant_defs T_SEMI
    7          | T_CONST • constant_defs error

    T_ID  shift, and go to state 11

    constant_defs  go to state 12


State 7

    2 program: header declarations • subprograms comp_statement $@1 T_DOT

    $default  reduce using rule 88 (subprograms)

    subprograms  go to state 13


State 8

    5 declarations: constdefs • typedefs vardefs

    T_TYPE  shift, and go to state 14

    $default  reduce using rule 47 (typedefs)

    typedefs  go to state 15


State 9

    4 header: T_PROGRAM T_ID error •

    $default  reduce using rule 4 (header)


State 10

    3 header: T_PROGRAM T_ID T_SEMI •

    $default  reduce using rule 3 (header)


State 11

   12 constant_defs: T_ID • $@3 T_EQU expression

    $default  reduce using rule 11 ($@3)

    $@3  go to state 16


State 12

    6 constdefs: T_CONST constant_defs • T_SEMI
    7          | T_CONST constant_defs • error
   10 constant_defs: constant_defs • T_SEMI T_ID $@2 T_EQU expression
   13              | constant_defs • error T_ID T_EQU expression

    error   shift, and go to state 17
    T_SEMI  shift, and go to state 18


State 13

    2 program: header declarations subprograms • comp_statement $@1 T_DOT
   87 subprograms: subprograms • subprogram T_SEMI
   89            | subprograms • subprogram error

    T_PROCEDURE  shift, and go to state 19
    T_FUNCTION   shift, and go to state 20
    T_BEGIN      shift, and go to state 21

    subprogram      go to state 22
    sub_header      go to state 23
    comp_statement  go to state 24


State 14

   45 typedefs: T_TYPE • type_defs T_SEMI
   46         | T_TYPE • type_defs error

    T_ID  shift, and go to state 25

    type_defs  go to state 26


State 15

    5 declarations: constdefs typedefs • vardefs

    T_VAR  shift, and go to state 27

    $default  reduce using rule 83 (vardefs)

    vardefs  go to state 28


State 16

   12 constant_defs: T_ID $@3 • T_EQU expression

    T_EQU  shift, and go to state 29


State 17

    7 constdefs: T_CONST constant_defs error •
   13 constant_defs: constant_defs error • T_ID T_EQU expression

    T_ID  shift, and go to state 30

    $default  reduce using rule 7 (constdefs)


State 18

    6 constdefs: T_CONST constant_defs T_SEMI •
   10 constant_defs: constant_defs T_SEMI • T_ID $@2 T_EQU expression

    T_ID  shift, and go to state 31

    $default  reduce using rule 6 (constdefs)


State 19

   97 sub_header: T_PROCEDURE • T_ID $@7 formal_parameters

    T_ID  shift, and go to state 32


State 20

   95 sub_header: T_FUNCTION • T_ID $@6 formal_parameters T_COLON standard_type
   98           | T_FUNCTION • T_ID

    T_ID  shift, and go to state 33


State 21

  108 comp_statement: T_BEGIN • $@8 statements T_END

    $default  reduce using rule 107 ($@8)

    $@8  go to state 34


State 22

   87 subprograms: subprograms subprogram • T_SEMI
   89            | subprograms subprogram • error

    error   shift, and go to state 35
    T_SEMI  shift, and go to state 36


State 23

   90 subprogram: sub_header • T_SEMI T_FORWARD
   91           | sub_header • T_SEMI declarations subprograms comp_statement
   92           | sub_header • error T_FORWARD
   93           | sub_header • error declarations subprograms comp_statement

    error   shift, and go to state 37
    T_SEMI  shift, and go to state 38


State 24

    2 program: header declarations subprograms comp_statement • $@1 T_DOT

    $default  reduce using rule 1 ($@1)

    $@1  go to state 39


State 25

   50 type_defs: T_ID • T_EQU type_def

    T_EQU  shift, and go to state 40


State 26

   45 typedefs: T_TYPE type_defs • T_SEMI
   46         | T_TYPE type_defs • error
   49 type_defs: type_defs • T_SEMI T_ID $@5 T_EQU type_def
   51          | type_defs • error T_ID T_EQU type_def

    error   shift, and go to state 41
    T_SEMI  shift, and go to state 42


State 27

   81 vardefs: T_VAR • variable_defs T_SEMI
   82        | T_VAR • variable_defs error

    T_ID  shift, and go to state 43

    identifiers    go to state 44
    variable_defs  go to state 45


State 28

    5 declarations: constdefs typedefs vardefs •

    $default  reduce using rule 5 (declarations)


State 29

   12 constant_defs: T_ID $@3 T_EQU • expression

    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 55
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58


State 30

   13 constant_defs: constant_defs error T_ID • T_EQU expression

    T_EQU  shift, and go to state 59


State 31

   10 constant_defs: constant_defs T_SEMI T_ID • $@2 T_EQU expression

    $default  reduce using rule 9 ($@2)

    $@2  go to state 60


State 32

   97 sub_header: T_PROCEDURE T_ID • $@7 formal_parameters

    $default  reduce using rule 96 ($@7)

    $@7  go to state 61


State 33

   95 sub_header: T_FUNCTION T_ID • $@6 formal_parameters T_COLON standard_type
   98           | T_FUNCTION T_ID •

    error     reduce using rule 98 (sub_header)
    T_SEMI    reduce using rule 98 (sub_header)
    $default  reduce using rule 94 ($@6)

    $@6  go to state 62


State 34

  108 comp_statement: T_BEGIN $@8 • statements T_END

    T_READ   shift, and go to state 63
    T_FOR    shift, and go to state 64
    T_IF     shift, and go to state 65
    T_BEGIN  shift, and go to state 21
    T_WHILE  shift, and go to state 66
    T_WITH   shift, and go to state 67
    T_WRITE  shift, and go to state 68
    T_ID     shift, and go to state 69

    $default  reduce using rule 120 (statement)

    variable         go to state 70
    comp_statement   go to state 71
    statements       go to state 72
    statement        go to state 73
    assignment       go to state 74
    if_statement     go to state 75
    while_statement  go to state 76
    for_statement    go to state 77
    with_statement   go to state 78
    subprogram_call  go to state 79
    io_statement     go to state 80


State 35

   89 subprograms: subprograms subprogram error •

    $default  reduce using rule 89 (subprograms)


State 36

   87 subprograms: subprograms subprogram T_SEMI •

    $default  reduce using rule 87 (subprograms)


State 37

   92 subprogram: sub_header error • T_FORWARD
   93           | sub_header error • declarations subprograms comp_statement

    T_FORWARD  shift, and go to state 81
    T_CONST    shift, and go to state 6

    $default  reduce using rule 8 (constdefs)

    declarations  go to state 82
    constdefs     go to state 8


State 38

   90 subprogram: sub_header T_SEMI • T_FORWARD
   91           | sub_header T_SEMI • declarations subprograms comp_statement

    T_FORWARD  shift, and go to state 83
    T_CONST    shift, and go to state 6

    $default  reduce using rule 8 (constdefs)

    declarations  go to state 84
    constdefs     go to state 8


State 39

    2 program: header declarations subprograms comp_statement $@1 • T_DOT

    T_DOT  shift, and go to state 85


State 40

   50 type_defs: T_ID T_EQU • type_def

    T_ARRAY   shift, and go to state 86
    T_SET     shift, and go to state 87
    T_RECORD  shift, and go to state 88
    T_ID      shift, and go to state 89
    T_ADDOP   shift, and go to state 90
    T_LPAREN  shift, and go to state 91
    T_CCONST  shift, and go to state 92
    T_BCONST  shift, and go to state 93
    T_ICONST  shift, and go to state 94

    type_def  go to state 95
    limit     go to state 96


State 41

   46 typedefs: T_TYPE type_defs error •
   51 type_defs: type_defs error • T_ID T_EQU type_def

    T_ID  shift, and go to state 97

    $default  reduce using rule 46 (typedefs)


State 42

   45 typedefs: T_TYPE type_defs T_SEMI •
   49 type_defs: type_defs T_SEMI • T_ID $@5 T_EQU type_def

    T_ID  shift, and go to state 98

    $default  reduce using rule 45 (typedefs)


State 43

   80 identifiers: T_ID •

    $default  reduce using rule 80 (identifiers)


State 44

   79 identifiers: identifiers • T_COMMA T_ID
   86 variable_defs: identifiers • T_COLON typename

    T_COMMA  shift, and go to state 99
    T_COLON  shift, and go to state 100


State 45

   81 vardefs: T_VAR variable_defs • T_SEMI
   82        | T_VAR variable_defs • error
   84 variable_defs: variable_defs • T_SEMI identifiers T_COLON typename
   85              | variable_defs • error identifiers T_COLON typename

    error   shift, and go to state 101
    T_SEMI  shift, and go to state 102


State 46

   24 expression: T_ID • $@4 T_LPAREN expressions T_RPAREN
   29 variable: T_ID •

    T_LPAREN  reduce using rule 23 ($@4)
    $default  reduce using rule 29 (variable)

    $@4  go to state 103


State 47

   20 expression: T_ADDOP • expression

    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 104
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58


State 48

   21 expression: T_NOTOP • expression

    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 105
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58


State 49

   26 expression: T_LPAREN • expression T_RPAREN
   28           | T_LPAREN • expression error

    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 106
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58


State 50

   38 constant: T_CCONST •

    $default  reduce using rule 38 (constant)


State 51

   39 setexpression: T_LBRACK • elexpressions T_RBRACK
   40              | T_LBRACK • error T_RBRACK

    error     shift, and go to state 107
    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 108
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58
    elexpressions  go to state 109
    elexpression   go to state 110


State 52

   37 constant: T_BCONST •

    $default  reduce using rule 37 (constant)


State 53

   35 constant: T_ICONST •

    $default  reduce using rule 35 (constant)


State 54

   36 constant: T_RCONST •

    $default  reduce using rule 36 (constant)


State 55

   12 constant_defs: T_ID $@3 T_EQU expression •
   14 expression: expression • T_RELOP expression
   15           | expression • T_EQU expression
   16           | expression • T_INOP expression
   17           | expression • T_OROP expression
   18           | expression • T_ADDOP expression
   19           | expression • T_MULDIVANDOP expression

    T_RELOP        shift, and go to state 111
    T_ADDOP        shift, and go to state 112
    T_OROP         shift, and go to state 113
    T_MULDIVANDOP  shift, and go to state 114
    T_EQU          shift, and go to state 115
    T_INOP         shift, and go to state 116

    $default  reduce using rule 12 (constant_defs)


State 56

   22 expression: variable •
   30 variable: variable • T_DOT T_ID
   31         | variable • T_LBRACK expressions T_RBRACK
   32         | variable • T_LBRACK expressions error

    T_DOT     shift, and go to state 117
    T_LBRACK  shift, and go to state 118

    $default  reduce using rule 22 (expression)


State 57

   25 expression: constant •

    $default  reduce using rule 25 (expression)


State 58

   27 expression: setexpression •

    $default  reduce using rule 27 (expression)


State 59

   13 constant_defs: constant_defs error T_ID T_EQU • expression

    T_ID      shift, and go to state 46
    T_ADDOP   shift, and go to state 47
    T_NOTOP   shift, and go to state 48
    T_LPAREN  shift, and go to state 49
    T_CCONST  shift, and go to state 50
    T_LBRACK  shift, and go to state 51
    T_BCONST  shift, and go to state 52
    T_ICONST  shift, and go to state 53
    T_RCONST  shift, and go to state 54

    expression     go to state 119
    variable       go to state 56
    constant       go to state 57
    setexpression  go to state 58


State 60

   10 constant_defs: constant_defs T_SEMI T_ID $@2 • T_EQU expression

    T_EQU  shift, and go to state 120


State 61

   97 sub_header: T_PROCEDURE T_ID $@7 • formal_parameters

    T_LPAREN  shift, and go to state 121

    $default  reduce using rule 101 (formal_parameters)

    formal_parameters  go to state 122


State 62
